apps/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - login.ch.tudelft.nl
  rules:
  - backendRefs:
    - name: keycloak
      port: 80
